horizontal scroll fix

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 body, html {
     margin: 0;
     padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
     background-color: black;
     font-family: Lato, "Lucida Console", Monaco, monospace;
 }
@@ -10,8 +12,8 @@ body, html {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 95%;
+    max-width: 95%;
     z-index: 1;
 }
 
